# bpy.ops.context

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml
docs/: index.md
src/: build.py  index.mustache  ops.md  util.py
